feat: Can create my restaurant + integrate Tailwind CSS and Leaflet for enhanced styling and mapping functionality
